Update PART 3, Tier 3 - Modelling.ipynb

--- a/PART 3, Tier 3 - Modelling.ipynb
+++ b/PART 3, Tier 3 - Modelling.ipynb
@@ -1694,18 +1694,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.1420605474512291"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1420605474512291\n"
+     ]
     }
    ],
    "source": [
@@ -1716,7 +1713,7 @@
     "obs_difference = abs(obs_difference)\n",
     "\n",
     "# Print out this value; it should be 0.1420605474512291. \n",
-    "obs_difference"
+    "print(obs_difference)"
    ]
   },
   {
